--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
 body{
-    height: 100vh;
-    width: 100vw;
     margin: 0;
 }
-.wrapper{
+main{
+    height: 100vh;
+    width: 100vw;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-template-areas: "main";
+}
+h1{
+    text-align: center;
+    margin: auto;
 }
 
 section {
